# ren

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: default.frag  default.vert
assets/shaders/backpack/: backpack.frag
assets/shaders/cellular_automata/: cellular_automata.frag
assets/shaders/default/: default.frag
assets/shaders/lighting/: lighting.frag  lighting.vert
assets/shaders/normals/: normals.frag  normals.vert
assets/shaders/planetary_system/: planetary.frag
assets/shaders/skybox/: skybox.vert
assets/shaders/voronoi/: voronoi.frag  voronoi.vert
include/: Camera.hpp  Model.hpp  Scene.hpp  Window.hpp
include/assets/: AssetManager.hpp
include/components/: Component.hpp  Hierarchy.hpp  Mesh.hpp  MeshRenderer.hpp  Shader.hpp  Transform.hpp
include/components/io/: AssetManager.hpp
include/components/meshes/: Capsule.hpp  Cube.hpp  Cylinder.hpp  Mesh.hpp  Quad.hpp  Sphere.hpp  Vertex.hpp
include/components/rendering/: Mesh.hpp
include/components/shaders/: Shader.hpp  Texture.hpp
include/core/: Camera.hpp  Entity.hpp  Renderer.hpp  Scene.hpp  Window.hpp
include/io/: AssetManager.hpp  Event.hpp  InputSystem.hpp
include/io/devices/: Keyboard.hpp  Mouse.hpp
include/io/events/keyboard/: KeyInput.hpp
include/io/events/mouse/: Clicked.hpp  Entered.hpp  Moved.hpp  Scrolled.hpp
include/primitives/: Texture.hpp  Vertex.hpp
include/ren/: assets.hpp  core.hpp  ecs.hpp  io.hpp  physics.hpp  renderer.hpp  utils.hpp
include/ren/assets/: AssetManager.hpp
include/ren/core/: Scene.hpp  Window.hpp
include/ren/ecs/components/: Component.hpp  ComponentManager.hpp  Hierarchy.hpp  Mesh.hpp  MeshRenderer.hpp  Transform.hpp
include/ren/ecs/entities/: Entity.hpp  EntityManager.hpp
include/ren/ecs/systems/: System.hpp  SystemManager.hpp
include/ren/renderer/: Camera.hpp  CameraSystem.hpp  Renderer.hpp
include/ren/utils/: Timer.hpp  error_handler.hpp  imgui.hpp
include/systems/: CameraSystem.hpp  RenderSystem.hpp  RenderingSystem.hpp  System.hpp  SystemManager.hpp
include/utils/: error_handler.hpp
src/: Camera.cpp  Model.cpp  Scene.cpp  Window.cpp
src/assets/: AssetManager.cpp  CMakeLists.txt
src/components/: CMakeLists.txt  Hierarchy.cpp  Mesh.cpp  MeshRenderer.cpp  Shader.cpp  Transform.cpp
src/components/io/: AssetManager.cpp
src/components/meshes/: Capsule.cpp  Cube.cpp  Cylinder.cpp  Mesh.cpp  Quad.cpp  Sphere.cpp
src/components/rendering/: Mesh.cpp
src/components/shaders/: Shader.cpp
src/core/: CMakeLists.txt  Camera.cpp  Entity.cpp  Renderer.cpp  Scene.cpp  Window.cpp
src/io/: AssetManager.cpp  CMakeLists.txt  InputSystem.cpp
src/io/devices/: Keyboard.cpp  Mouse.cpp
src/ren/assets/: AssetManager.cpp  CMakeLists.txt
src/ren/core/: CMakeLists.txt  Scene.cpp  Window.cpp
src/ren/ecs/: CMakeLists.txt
src/ren/io/: CMakeLists.txt
src/ren/physics/: CMakeLists.txt
src/ren/renderer/: CMakeLists.txt  Camera.cpp  CameraSystem.cpp  Renderer.cpp
src/ren/utils/: CMakeLists.txt  Timer.cpp  imgui.cpp  stb_image.cpp
src/systems/: CMakeLists.txt  CameraSystem.cpp  RenderingSystem.cpp  SystemManager.cpp
src/utils/: CMakeLists.txt  error_handler.cpp
test/: CMakeLists.txt
test/cpp/: composition.cpp
test/e2e/: backpack.cpp  cellular_automata.cpp  ecs.cpp  imgui_demo.cpp  input_system.cpp  lighting.cpp  meshes.cpp  physics_system.cpp  planetery_system.cpp  primitive_cube.cpp  primitive_sphere.cpp  scene_0.cpp  stress.cpp  voronoi.cpp
(+69 files in other folders)
