cmake_minimum_required(VERSION 3.10)
project(REN LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)

add_subdirectory(src/utils)
add_subdirectory(src/components)
add_subdirectory(src/core)
add_subdirectory(src/io)
add_subdirectory(src/systems)
add_subdirectory(src/assets)
add_subdirectory(test)