cmake_minimum_required(VERSION 3.10)
project(REN LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)

add_subdirectory(src/ren/utils)
add_subdirectory(src/ren/ecs)
add_subdirectory(src/ren/core)
add_subdirectory(src/ren/assets)
add_subdirectory(src/ren/io)
add_subdirectory(src/ren/renderer)
add_subdirectory(test)